# conda-whl-support

./: .gitignore  LICENSE  README.md  pyproject.toml
conda.recipe/: meta.yaml
src/conda_whl_support/: extract_whl.py  extract_whl_or_tarball.py  patched_load.py  plugin.py
